CHANGES IN VERSION 0.6.0
------------------------
 o fixed typos in vigs [2015-02-12 Thu]
 o new etrid2gr function to convert Ensembl transcript identifiers to
   GRanges objects [2015-02-13 Fri]
 
CHANGES IN VERSION 0.5.5
------------------------
 o various fixes in vignettes [2015-02-12 Thu]
 
CHANGES IN VERSION 0.5.4
------------------------
 o Ensembl - UCSC mapping vignette [2015-02-11 Wed]
  
CHANGES IN VERSION 0.5.3
------------------------
 o Render vignettes with rmarkdown [2015-02-11 Wed]
 o Improve mapping vignette [2015-02-11 Wed]
 
CHANGES IN VERSION 0.5.2
------------------------
 o Adapt to new `addIdentification` signature in MSnbase >= 1.15.5.
   [2015-02-10 Tue]

CHANGES IN VERSION 0.5.1
------------------------
 o Update vignette since TxDb's UCSC coordinates differ from those
   fetched from Ensembl via biomaRt. [2015-01-05 Mon]
 o Add `isCleaved` method. [2015-01-03 Sat]
 o Add `calculateHeavyLabels`; closes #6 and cleaver#5. [2015-01-03 Sat]

CHANGES IN VERSION 0.5.0
------------------------
 o Bump version for new Bioc release.

CHANGES IN VERSION 0.2.2
------------------------
 o Fix warning re undocumented '[' and siglist 'Proteins,ANY,ANY,ANY'
   [2014-10-03 Fri]

CHANGES IN VERSION 0.2.1
------------------------
 o Counting id files when adding [2014-09-17 Wed]

CHANGES IN VERSION 0.2.0
------------------------
 o support for mzID and mzR (new) to extract identification data from
   mzid files via addIdentificationData [2014-09-12 Fri]
 o support to add id data from > 1 mzid file [2014-09-12 Fri]
 o new Pparams parameter infrastructure [2014-09-13 Sat]

CHANGES IN VERSION 0.1.10
-------------------------
 o Allow spaces in GeneNames (GN) of fasta comments; fixes #7 [2014-09-13 Sat]

CHANGES IN VERSION 0.1.9
------------------------
 o Use BioStyle

CHANGES IN VERSION 0.1.8
------------------------
 o Using knit2html instead of rmarkdown::render since it is not yet
   available on the Bioc build servers [2014-07-24 Thu]
